--- a/Deployment of Sentiment Analysis/SageMaker Project.ipynb
+++ b/Deployment of Sentiment Analysis/SageMaker Project.ipynb
@@ -1244,7 +1244,7 @@
    "source": [
     "# TODO: Convert test_review into a form usable by the model and save the results in test_data\n",
     "tr_words, tr_len = convert_and_pad(word_dict, review_to_words(test_review))\n",
-    "test_data = np.hstack((tr_len, tr_words))\n",
+    "test_data = np.hstack(([tr_len], tr_words))\n",
     "test_data = test_data.reshape(1, -1)"
    ]
   },
